--- a/resources/css/pane-mid.scss
+++ b/resources/css/pane-mid.scss
@@ -6,6 +6,7 @@
 
   width: $width-pane-mid;
   height: 100%;
+  overflow: auto;
 
   .toolbar {
     border-bottom-width: 1px;
