--- a/resources/css/pane-right.scss
+++ b/resources/css/pane-right.scss
@@ -67,7 +67,6 @@
 
   .cm-container {
     display: flex;
-    margin-top: 10px;
     flex: 1 0 0;
     position: relative;
     overflow: hidden;
